linked updated css link to html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM checkpoint</title>
-    <link rel="stylesheet" href="/domCheckpoint/style.css" />
+    <link rel="stylesheet" href="style.css"/>
     <script
       src="https://kit.fontawesome.com/0bc1cf895d.js"
       crossorigin="anonymous"
