--- a/index.html
+++ b/index.html
@@ -98,100 +98,7 @@
         </div>
         <div class="price">#200.000</div>
       </div>
-      <!-- airpod section -->
-      <!-- <div class="air-box">
-        <div class="i-phone">
-          <div>
-            <img
-              class="phone-img"
-              src="https://ng.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/80/055676/1.jpg?0766"
-              alt="airpod"
-            />
-          </div>
-          <div>
-            <h4>
-              seller:
-              <img
-                class="gomycode"
-                src="https://gomycodewebsite.blob.core.windows.net/website/img/black_Logo_342868e838_129748d4cd.svg"
-                alt=""
-              />
-            </h4>
-            <h4>Airpods Pro With Noise Cancellation - White</h4>
-            <button class="heart"><i class="fas fa-heart"></i></button>
-            <a class="deletion" href=""> <i class="far fa-trash-alt"></i></a>
-          </div>
-        </div>
-        <div class="quantity">
-          <h4 id="quantity-el">Quantity:</h4>
-          <p id="count-el">0</p>
-          <button id="incrementBtn" onclick="incrementBtn()">+</button>
-          <button id="decrementBtn" onclick="decrementBtn()">-</button>
-        </div>
-        <!-- touch screen watch -->
-      <!-- </div>
-      <div class="smart-box">
-        <div class="i-phone">
-          <div>
-            <img
-              class="phone-img"
-              src="https://ng.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/98/237454/1.jpg?2925"
-              alt="sneakers"
-            />
-          </div>
-          <div>
-            <h4>
-              seller:
-              <img
-                class="gomycode"
-                src="https://gomycodewebsite.blob.core.windows.net/website/img/black_Logo_342868e838_129748d4cd.svg"
-                alt=""
-              />
-            </h4>
-            <h4>Touch Screen Business Watch</h4>
-            <button class="heart"><i class="fas fa-heart"></i></button>
-            <a class="deletion" href=""> <i class="far fa-trash-alt"></i></a>
-          </div>
-        </div>
-        <div class="quantity">
-          <h4 id="quantity-el">Quantity:</h4>
-          <p id="count-el">0</p>
-          <button id="incrementBtn" onclick="incrementBtn()">+</button>
-          <button id="decrementBtn" onclick="decrementBtn()">-</button>
-        </div>
-      </div> -->
-      <!-- sneakers section -->
-      <!-- <div class="sneakers-box">
-        <div class="i-phone">
-          <div>
-            <img
-              class="phone-img"
-              src="https://ng.jumia.is/unsafe/fit-in/300x300/filters:fill(white)/product/57/182997/1.jpg?1885"
-              alt="sneakers"
-            />
-          </div>
-          <div>
-            <h4>
-              seller:
-              <img
-                class="gomycode"
-                src="https://gomycodewebsite.blob.core.windows.net/website/img/black_Logo_342868e838_129748d4cd.svg"
-                alt=""
-              />
-            </h4>
-            <h4>Men sneakers Sports Casual Footwear</h4>
-            <button class="heart"><i class="fas fa-heart"></i></button>
-            <a class="deletion" href=""> <i class="far fa-trash-alt"></i></a>
-          </div>
-        </div>
-        <div class="quantity">
-          <h4 id="quantity-el">Quantity:</h4>
-          <p id="count-el">0</p>
-          <button id="incrementBtn" onclick="incrementBtn()">+</button>
-          <button id="decrementBtn" onclick="decrementBtn()">-</button>
-        </div>
-      </div> -->
     </section>
-    <script src="/domCheckpoint/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
